MirrorBall rendering on wrong camera axis #45034

Closed
opened 2015-06-11 19:30:26 +02:00 by Nicolas Longchamps · 9 comments

System Information
Windows
renderer: 'GeForce GTX 770/PCIe/SSE2'
vendor: 'NVIDIA Corporation'
version: '4.5.0 NVIDIA 347.88'

Blender Version
version 2.75 (sub 0), branch b'master', commit date b'2015-06-10' b'15:39', hash b'bff8b5d', b''

Short description of error
When set to mirrorball, camera seems to render +X direction, rather than usual -Z direction.
Image also seems flipped on horizontal axis, although i am unsure if this is normal for mirrorball rendering.MirrorBall_CamOrient.blend

Exact steps for others to reproduce the error
See attached .blend

**System Information** Windows renderer: 'GeForce GTX 770/PCIe/SSE2' vendor: 'NVIDIA Corporation' version: '4.5.0 NVIDIA 347.88' **Blender Version** version 2.75 (sub 0), branch b'master', commit date b'2015-06-10' b'15:39', hash b'bff8b5d', b'' **Short description of error** When set to mirrorball, camera seems to render +X direction, rather than usual -Z direction. Image also seems flipped on horizontal axis, although i am unsure if this is normal for mirrorball rendering.[MirrorBall_CamOrient.blend](https://archive.blender.org/developer/F189819/MirrorBall_CamOrient.blend) **Exact steps for others to reproduce the error** See attached .blend

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @nlong

Added subscriber: @nlong

Added subscriber: @mont29

Added subscriber: @mont29

There indeed seems to be something wrong going on here…

There indeed seems to be something wrong going on here…
Sergey Sharybin was assigned by Bastien Montagne 2015-06-11 20:26:32 +02:00

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

This issue was referenced by 211a95b538

This issue was referenced by 211a95b53800b781edc59dbd179a3a20c1a9e445

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@93e5c51be0

This issue was referenced by blender/cycles@93e5c51be08a8c187b9f4b3093e8c5db07b39f83

This issue was referenced by c1cf70fbca

This issue was referenced by c1cf70fbca15b33012c8fbb699a2ceac3d576ac2
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45034
No description provided.